improvement: Added dependencies to pipfile and updated to Python 3.9

--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,8 @@ verify_ssl = true
 
 [packages]
 "pdfminer.six" = "*"
+numpy = "*"
+pandas = "*"
 
 [requires]
-python_version = "3.7"
+python_version = "3.9"
